Upgrade to Java 21 (Spring Boot 3 / jakarta migration)